Fix image placeholder not showing correctly

--- a/src/css/loadings.scss
+++ b/src/css/loadings.scss
@@ -80,12 +80,9 @@
     border-radius: 5px;
     background-size: 200% 100%;
     animation: 1s shine linear infinite;
-    width: 100%;
-    height: 100%;
+    width: 308px;
+    height: 560px;
     z-index: 100;
-    position: absolute;
-    top: 0;
-    left: 0;
   }
   @keyframes shine {
     to {
